--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,17 @@
 				<artifactId>bootstrap</artifactId>
 				<version>5.3.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.yaml</groupId>
+			<artifactId>snakeyaml</artifactId>
+			<version>2.0</version>
+		</dependency>
+
+		<dependency>
+				<groupId>com.github.javafaker</groupId>
+				<artifactId>javafaker</artifactId>
+				<version>1.0.2</version>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.webjars/jquery -->
 		<dependency>
 				<groupId>org.webjars</groupId>
